--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -46,6 +47,7 @@
     "lucide-react": "^0.456.0",
     "next": "14.2.17",
     "next-themes": "^0.4.3",
+    "prisma": "^5.22.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
